--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "onCommand:myConsoleLog.commentAllLog",
     "onCommand:myConsoleLog.unCommentAllLog"
   ],
-  "main": "./out/extension",
+  "main": "./out/index",
   "contributes": {
     "configuration": {
       "type": "object",
@@ -30,6 +30,11 @@
           "type": "string",
           "default": "'{C} -> {F}'",
           "description": "no variable log format."
+        },
+        "semicolon": {
+          "type": "boolean",
+          "default": true,
+          "description": "show semicolon"
         }
       }
     },
